- Fixes:     - adicionado "ob_clean();" em createPayment.php para limpar     o echo com o Token da Token.php pois ao chamar a Thankyou.php     exibia o token de autorização na tela;     - adicionado cabeçalho "Braintree Hosted Fields" na Thankyou.php.
- Remoção de código:
    - Removido comentário em hfields.js com tentativa de manipular
    nonce com url absoluta (dias sombrios....AJAX FTW!!!).

- Update de CSS:
    - adicionado CSS na Thankyou.php;
    - adicionado classe "cabecalho" no index.php;
    - adicionado fonte xx-large para melhor visualização.
    Obs.: Será necessário um Update focado em estilização da página.

--- a/style.css
+++ b/style.css
@@ -1,22 +1,29 @@
+.cabecalho {
+    background-color: #4086ff;
+    text-align: center;
+    font-size: xx-large;
+}
+
 body {
     background-color: #000;
 }
 
 #pButton {
-    object-position: center;
+    align-items: center;
     color: green;
+    size: 20px;
 }
 
 #my-sample-form {
     background-color: #4086ff;
     border: 1px dashed black;
     padding: 1%;
+    font-size: xx-large;
 }
 
 .campoform {
     background-color: #777;
-    border: 1px solid #333;
-    size: 20%;
+    border: 10px solid #333;
 }
 
 .campoform.braintree-hosted-fields-focused {
