- CSS Adicionado ao front - Adicionado CSS nas páginas index.php e Thankyou.php

--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
-.cabecalho {
-    background-color: #4086ff;
-    text-align: center;
-    font-size: xx-large;
+html{
+    align-items: center;
 }
 
-body {
+#cabecalho {
+    background-color: #4086ff;
+    text-align: center;
+    font-size: large;
+}
+
+#rodape {
+    background-color: #4086ff;
+    text-align: center;
+    font-size: large;
+}
+
+#body {
     background-color: #000;
+    align-items: center;
+}
+
+#submit_button{
+    background-color: #4086ff; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 #pButton {
@@ -15,10 +38,32 @@ body {
 }
 
 #my-sample-form {
-    background-color: #4086ff;
-    border: 1px dashed black;
+    background-color: #fff; 
+    border: 1px solid black;
     padding: 1%;
-    font-size: xx-large;
+    align-items: center;
+    font-size: large;
+}
+
+#bthankyou{
+    text-align: center;
+}
+
+#sucessfulimg{
+    width: 100px;
+    height: 100px;
+}
+
+#card-number{
+    border: 1px solid black;
+}
+
+#cvv{
+    border: 1px solid black;
+}
+
+#expiration-date{
+    border: 1px solid black;
 }
 
 .campoform {
